# medic-ext-postgres

./: .envrc  .gitignore  Brewfile  CHANGELOG.md  Cargo.toml  README.md
.config/: medic.toml
.medic/: config.toml
medic-check-postgres/: Cargo.toml
medic-check-postgres/src/: lib.rs  main.rs
medic-check-postgres/src/cli/: app.rs
medic-check-postgres/src/env/: mod.rs
