[workspace]

members = [
  "medic-check-postgres",
]
resolver = "1"

[workspace.dependencies]
clap = { version = "4.1.8", features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
envsubst = "0.2"
indoc = "2.0.1"
medic-lib = "0.1"
postgres = "0.19"

[workspace.package]
authors = ["Eric Saxby <sax@livinginthepast.org>", "synchonal.dev"]
description = "Medic extension for Postgres"
edition = "2021"
homepage = "https://github.com/synchronal"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/synchronal/medic-ext-postgres"
version = "1.1.1"

