[package]
name = "medic-check-postgres"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
envsubst = { workspace = true }
indoc = { workspace = true }
medic-lib = { workspace = true }
postgres = { workspace = true }

[features]
# Treat warnings as a build error.
default = ["strict"]
strict = []
