[package]
name = "medic-check-postgres"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
envsubst = { workspace = true }
indoc = { workspace = true }
medic-lib = { workspace = true }
postgres = { workspace = true }

[features]
# Treat warnings as a build error.
default = ["strict"]
strict = []
